# AudioDisplay

./: CMakeLists.txt  partitions.csv
core/: CMakeLists.txt  idf_component.yml
core/component/inc/: Led.h  Webserver.h  webserver_request.h
core/component/src/: WebServerRequest.cpp  Webserver.cpp  webserver_request.cpp
core/inc/: FFT.h  FileSystem.h  JsonDocument.hpp  SystemMonitor.h  WebServerRequest.h  Webserver.h  audioSample.h  bluetooth.h  core.hpp  core_nvs.h  fileSystem.hpp  file_system.h  html.h  preference.h  sensor.h  update.h  upload.h  wifi.h
core/src/: CoreNVS.cpp  FFT.cpp  FileSystem.cpp  SystemMonitor.cpp  WebServerRequest.cpp  Webserver.cpp  bluetooth.cpp  core_nvs.cpp  file_system.cpp  preference.cpp  system_monitor.cpp  update.cpp  wifi.cpp
data/: index.html  wifi.html
main/: CMakeLists.txt  main.cpp
main/component/: CMakeLists.txt
main/component/inc/: Bluetooth.h  webserver_interface.h
main/component/src/: audio_sample.cpp  index_webserver.cpp  wifi_config_webserver.cpp
main/core/: CMakeLists.txt
main/core/inc/: FFT.h  config.h  core.hpp  file_system.h  html.h  log.hpp  preference.h  system_monitor.h  wifi.hpp
main/core/src/: preference.cpp  sensor.cpp  wifi.cpp
main/inc/: audio_diaplay_system.h  audio_system.h  system.h  webserver_interface.h
main/manage/inc/: LedManage.h  SensorManage.h  System.h  WebServerManage.h
main/manage/src/: SensorManage.cpp  System.cpp  WebserverManage.cpp
main/src/: audio_system.cpp  index_webserver.cpp  system.cpp  wifi_config_webserver.cpp
